cargo-features = ["edition"]

[package]
edition = "2018"
name = "flowgger"
version = "0.2.8"
authors = ["Frank Denis <github@pureftpd.org>"]
build = "build.rs"

[features]
capnp-recompile = ["capnpc"]
coroutines = ["coio"]
kafka = ["rdkafka"]

default = ["kafka"]

[build-dependencies.capnpc]
version = "*"
optional = true

[dependencies]
capnp = "*"
chrono = "*"
clap = "*"
flate2 = "*"
log = "*"
rand = "*"
redis = "*"
serde = "~0.8"
serde_json = "~0.8"
toml = "~0.2"
env_logger = "0.6"
futures = "0.1"

[dependencies.coio]
git = "https://github.com/zonyitoo/coio-rs"
optional = true

[dependencies.rdkafka]
version = "0.17"
#features = ["ssl", "sasl"]
optional = true

[dependencies.openssl]
version = "~0.9"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
